--- a/ix-lab2/notebooks/ix-lab2-notebook-part4.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part4.ipynb
@@ -43,35 +43,58 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import networkx as nx\n",
     "import collections\n",
     "\n",
-    "def ctr(nodes):\n",
-    "    if graph1.node[nodes]:\n",
-    "        graph1.node[nodes] += 1\n",
+    "#Count the number of visit in a node\n",
+    "def ctr(node,graph):\n",
+    "    if graph.node[node]:\n",
+    "        graph.node[node] += 1\n",
     "    else:\n",
-    "        graph1.node[nodes] = 1\n",
+    "        graph.node[node] = 1\n",
     "\n",
-    "\n",
+    "#Algorithm of the random surfer        \n",
+    "def randomSurfer(graph):\n",
+    "    #Choose random source\n",
+    "    node = np.random.randint(0,graph.number_of_nodes())\n",
+    "    node =str(node)\n",
+    "    ctr(node,graph)\n",
+    "    i = 0\n",
+    "    while graph.neighbors(node) and i<100:\n",
+    "        #Choose a rande neighbor\n",
+    "        tab = graph.neighbors(node)\n",
+    "        node = np.random.choice(tab)\n",
+    "        ctr(node,graph)\n",
+    "        i = i + 1\n",
+    "    print(graph.nodes(True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "graph1 = nx.read_adjlist('../data/absorbing.graph', create_using = nx.DiGraph())\n",
-    "r = np.random.randint(0,graph1.number_of_nodes())\n",
-    "r =str(r)\n",
-    "ctr(r)\n",
-    "i = 0\n",
-    "while graph1.neighbors(r) and i<100:\n",
-    "    tab = graph1.neighbors(r)\n",
-    "    r = np.random.choice(tab)\n",
-    "    ctr(r)\n",
-    "    i = i + 1\n",
-    "print(graph1.nodes(True))\n",
-    "\n"
+    "graph2 = nx.read_adjlist('../data/components.graph', create_using = nx.DiGraph())\n",
+    "\n",
+    "randomSurfer(graph1)\n",
+    "randomSurfer(graph2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We always observe the same pattern. It is because a graph can contain nodes with outdegree equal to zero or graph can have multiple connected components. And so the algorithm is stuck at a node or in a component."
    ]
   },
   {
@@ -85,31 +108,50 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Choose random node\n",
+    "def randomNode(graph):\n",
+    "    r = np.random.randint(0,graph.number_of_nodes())\n",
+    "    ctr(str(r),graph)\n",
+    "    return str(r)\n",
+    "#Algorithm of the random surfer modified\n",
+    "def randomSurferBis(graph):\n",
+    "    #Random source\n",
+    "    node = randomNode(graph)\n",
+    "    N = 100\n",
+    "    for i in range(N):\n",
+    "        #Choose node at random with probability 0.15\n",
+    "        r = np.random.random()\n",
+    "        if(r <= 0.15):\n",
+    "            node = randomNode(graph)\n",
+    "        else:\n",
+    "            #Check if node has neighbors, if not choose random node\n",
+    "            if not graph.neighbors(node):\n",
+    "                node = randomNode(graph)\n",
+    "            else:\n",
+    "                tab = graph.neighbors(node)\n",
+    "                r = np.random.choice(tab)\n",
+    "                ctr(r,graph)\n",
+    "    print(graph.nodes(True))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def randomNode(graph):\n",
-    "    r = np.random.randint(0,graph.number_of_nodes())\n",
-    "    ctr(str(r))\n",
-    "    return str(r)\n",
-    "\n",
     "graph1 = nx.read_adjlist('../data/absorbing.graph', create_using = nx.DiGraph())\n",
-    "node = randomNode(graph1)\n",
-    "N = 100\n",
-    "for i in range(N):\n",
-    "    r = np.random.random()\n",
-    "    if(r <= 0.15):\n",
-    "        node = randomNode(graph1)\n",
-    "    else:\n",
-    "        if not graph1.neighbors(node):\n",
-    "            node = randomNode(graph1)\n",
-    "        else:\n",
-    "            tab = graph1.neighbors(node)\n",
-    "            r = np.random.choice(tab)\n",
-    "            ctr(r)\n",
-    "print(graph1.nodes(True))\n",
-    "    "
+    "graph2 = nx.read_adjlist('../data/components.graph', create_using = nx.DiGraph())\n",
+    "\n",
+    "randomSurferBis(graph1)\n",
+    "randomSurferBis(graph2)\n"
    ]
   },
   {
@@ -131,37 +173,45 @@
    },
    "outputs": [],
    "source": [
+    "#Power iteration method\n",
     "def powerIteration(G,pi):\n",
     "    norm = 1\n",
+    "    #while the norm of the difference between new pi and old pi is too big we continue\n",
     "    while norm > pow(10,-6):\n",
     "        temp = pi\n",
     "        pi = np.matmul(pi,G)\n",
     "        norm = np.linalg.norm(pi-temp)\n",
     "    return pi\n",
     "\n",
+    "#Print the top ten page of the page rank\n",
     "def printTopTen(score,nbrNodes):\n",
     "    dic = {}\n",
+    "    #Create dictionary with the top 10 nodes as keys\n",
     "    for i in range(nbrNodes):\n",
     "        dic[i] = score[0][i]\n",
     "    sorted_node = sorted(dic.items(), key=lambda x: -x[1])\n",
     "    topTen = sorted_node[:10]\n",
     "    topTen = dict(topTen)\n",
-    "\n",
     "    result = dict.fromkeys(topTen.keys())\n",
+    "    \n",
+    "    #Search in wikipedia_titles the titles which correspond to the nodes\n",
     "    with open(\"../data/wikipedia_titles.tsv\") as title:\n",
     "        for line in title:\n",
     "            columns = line.split(\"\\t\")\n",
     "            if columns[0] != \"#page_id\" and int(columns[0]) in list(topTen.keys()):\n",
     "                result[int(columns[0])] = columns[1][:-1]\n",
     "    print(result.values())\n",
-    "    \n",
+    "\n",
+    "#Compute the page rank of each nodes    \n",
     "def pageRank(graph):\n",
     "    nbrNodes = graph.number_of_nodes()\n",
+    "    #Create matrix H\n",
     "    H = np.zeros((nbrNodes,nbrNodes))\n",
     "    for i in range(nbrNodes):\n",
     "        for j in range(nbrNodes):\n",
     "            if str(j) in graph.neighbors(str(i)):\n",
     "                H[i][j] = 1/graph.out_degree(str(i))\n",
+    "    #Create vector w\n",
     "    w = np.zeros((nbrNodes,1),int)\n",
     "    ones = np.ones((1,nbrNodes),int)\n",
     "    for i in range(nbrNodes):\n",
@@ -194,13 +244,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "The top ten pages are United Kingdom, Europe, England, France, World War II, Latin, Germany, English language, India and United States."
+   ]
   },
   {
    "cell_type": "markdown",
