--- a/ix-lab2/notebooks/ix-lab2-notebook-part1.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part1.ipynb
@@ -99,7 +99,7 @@
    },
    "outputs": [],
    "source": [
-    "def degreeDistribution(graph,log):\n",
+    "def degreeDistribution(graph):\n",
     "    #Get a dictionary where the key is the node and the value its degree\n",
     "    degree = graph.degree(graph.nodes())\n",
     "    sortedDegreeValues = sorted(list(degree.values()))\n",
@@ -108,37 +108,32 @@
     "    degreeCount = cl.Counter(sortedDegreeValues)\n",
     "    \n",
     "    #In order to correctly visualize the node degree distribution we have to use a log scaling on both axis\n",
-    "    #We can use an histrogram (with the log attribut to True)\n",
-    "    plt.hist(sortedDegreeValues, bins=15, log=log)\n",
-    "    #plt.axis([0,900,0,10**5])\n",
-    "    plt.title(\"Degree Distribution of 'network1'\", fontsize=15)\n",
+    "    plt.loglog(list(degreeCount.values()))\n",
+    "    plt.title(\"Log-log degree distribution plot\", fontsize=15)\n",
     "    plt.xlabel(\"Degree\", fontsize=10)\n",
     "    plt.ylabel(\"Number of nodes\", fontsize=10)\n",
     "    plt.grid()\n",
-    "    plt.show()\n",
-    "    \n",
-    "    #Or we can use a loglog plot\n",
-    "    plt.loglog(list(degreeCount.values()))\n",
-    "    plt.show()  "
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "degreeDistribution(graph1,True)"
+    "degreeDistribution(graph1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) The distribution is widly distributed that is why we have to plot using a logarithmic scale for both axis.\n",
-    "We can use a loglog plot or an histogram of pyplot. In both case we can make a log scale on the axis."
+    "1) The distribution is widely distributed with big values that is why we have to plot using a logarithmic scale for both axis.\n",
+    "We can use a loglog plot of pyplot in order to do this."
    ]
   },
   {
@@ -162,6 +157,13 @@
    "metadata": {},
    "source": [
     "2) The mean, the variance and the standart deviation of the degree distibution are respectively and approximately : 2.85, 435.13 and 20.86"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3) The node degree distribution seems to be Pareto distribution. The scale parameter $x_m$ is equal to 1 (the smallest possible value). And the shape parameter $\\alpha$ is equal to 1.54. In fact the expected value of a Pareto distribution is $E(x)=\\frac{\\alpha \\dot x_m}{\\alpha - 1}$. Thus with $E(x)=2.85$ we find $\\alpha=1.54$."
    ]
   },
   {
@@ -197,6 +199,7 @@
    "metadata": {},
    "source": [
     "1) There are 192 connected components in network1.\n",
+    "\n",
     "2) There is a giant component, its size (number of edges) is 1."
    ]
   },
@@ -276,7 +279,7 @@
     "print(nbr_edges2, nbr_nodes2)\n",
     "\n",
     "\n",
-    "degreeDistribution(graph2,False)\n",
+    "degreeDistribution(graph2)\n",
     "average2 = shortPaths(graph2)\n",
     "print(average2)"
    ]
@@ -286,7 +289,6 @@
    "metadata": {},
    "source": [
     "The network has 43516 edges and 26542 nodes. We can see that the length of the shortest distance between any two nodes of the graph is much bigger than 6. Moreover we reach, in average, 71 nodes from any nodes of the graph in 6 hops, which is far away of the total number of nodes. So we can conclude that this graph is not a small world\n"
-
    ]
   },
   {
