--- a/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
@@ -71,6 +71,7 @@
    },
    "outputs": [],
    "source": [
+    "#Function that plot the evolution of the epidemic over time\n",
     "def plotStatus(graph,epidemic):\n",
     "    nbOfNodes = nx.number_of_nodes(graph)\n",
     "    susTime = []\n",
@@ -78,32 +79,47 @@
     "    recTime = []\n",
     "    timeInf60 = 0\n",
     "    timeRec60 = 0\n",
+    "    \n",
+    "    #Every day of the epidemic\n",
     "    for i in range(0,101):\n",
     "        countSus = 0\n",
     "        countInf = 0\n",
     "        countRec = 0\n",
+    "        #Every nodes of the graph\n",
     "        for j in range(nbOfNodes):\n",
+    "            #look if the node is infected at a given day(we consider that a recovered node is no longer infected)\n",
     "            if epidemic.inf_time[j] <= i and epidemic.rec_time[j] >= i:\n",
     "                countInf += 1\n",
+    "            #look if the node is susceptible at a given day\n",
     "            elif epidemic.inf_time[j] > i:\n",
     "                countSus += 1\n",
+    "            #look if the node is recovered at a given day\n",
     "            elif epidemic.rec_time[j] <= i:\n",
     "                countRec += 1\n",
+    "                \n",
+    "        #Find the percentage of susceptible, infected and recovered people at a given time\n",
     "        percInf = (countInf*100)/nbOfNodes\n",
     "        percSus = (countSus*100)/nbOfNodes\n",
     "        percRec = (countRec*100)/nbOfNodes\n",
-    "        if percInf >= 60 and timeInf60 == 0:\n",
-    "            timeInf60 = i\n",
-    "        elif percRec >= 60 and timeRec60 == 0:\n",
-    "            timeRec60 = i\n",
-    "        \n",
     "        infTime.append(percInf)\n",
     "        susTime.append(percSus)\n",
     "        recTime.append(percRec)\n",
     "        \n",
+    "        #Find the time it takes before 60% of the population is infected and dead\n",
+    "        if percInf >= 60 and timeInf60 == 0:\n",
+    "            timeInf60 = i\n",
+    "        #We consider that every recovered node are dead because we can not make the difference with a healed one\n",
+    "        elif percRec >= 60 and timeRec60 == 0:\n",
+    "            timeRec60 = i\n",
+    "        \n",
+    "    #We plot the different percentages\n",
     "    plt.plot(infTime)\n",
     "    plt.plot(susTime)\n",
     "    plt.plot(recTime)\n",
+    "    plt.title(\"Percetage of susceptible, infected and recovered nodes over time\", fontsize=10)\n",
+    "    plt.xlabel(\"Time (in day)\", fontsize=15)\n",
+    "    plt.ylabel(\"Percentage of nodes\", fontsize=15)\n",
+    "    plt.legend([\"Infected\", \"Susceptible\", \"Recovered\"], loc='lower right', fontsize=14)\n",
     "    plt.show()\n",
     "\n",
     "    print(\"at the day\", timeInf60, \", 60% of the population is infected\")\n",
@@ -125,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It takes 7 day before 60% of the population is infected and 15 days before 60% is recovered"
+    "3) It takes 7 day before 60% of the population is infected and 15 days before 60% is recovered"
    ]
   },
   {
@@ -158,15 +174,19 @@
     "for i in json_load[\"nodes\"]:\n",
     "    coordinatesDic[i[\"id\"]] = (i[\"coordinates\"][0],i[\"coordinates\"][1])\n",
     "\n",
+    "plt.axis('off');\n",
     "nx.draw_networkx(G, coordinatesDic, with_labels=False, node_size=10, node_color=colorAt1)\n",
+    "plt.title(\"Graph of epidemic after 1 day\", fontsize=15)\n",
     "plt.show()\n",
     "plt.axis('off');\n",
     "nx.draw_networkx(G, coordinatesDic, with_labels=False, node_size=10, node_color=colorAt3)\n",
+    "plt.title(\"Graph of epidemic after 3 day\", fontsize=15)\n",
     "plt.show()\n",
     "plt.axis('off');\n",
     "nx.draw_networkx(G, coordinatesDic, with_labels=False, node_size=10, node_color=colorAt30)\n",
+    "plt.title(\"Graph of epidemic after 30 day\", fontsize=15)\n",
     "plt.show()\n",
-    "plt.axis('off');"
+    "print(\"Green nodes: Susceptible, Red nodes: Infected, Blue nodes: Recovered\")"
    ]
   },
   {
