--- a/ix-lab2/notebooks/ix-lab2-notebook-part1.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part1.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -181,17 +181,29 @@
    },
    "outputs": [],
    "source": [
-    "#We get the number of connected comonents\n",
-    "nbConnectedComponent = nx.number_connected_components(graph1)\n",
-    "print(nbConnectedComponent)\n",
+    "def giantComponent(graph):\n",
+    "    #We get the number of connected components\n",
+    "    nbConnectedComponent = nx.number_connected_components(graph)\n",
+    "    print(nbConnectedComponent)\n",
     "\n",
-    "#In order to find if there is a giant component in the graph we can start by finding all its connected components\n",
-    "conComponent = nx.connected_component_subgraphs(graph1)\n",
-    "#Then we find the component  with the larger number of edges\n",
-    "giant = max(conComponent, key=nx.number_of_edges)\n",
-    "#We get the size of the bigger component if this number is enough we can say that is a giant component\n",
-    "size = nx.number_of_edges(giant)\n",
-    "print(size)"
+    "    #In order to find if there is a giant component in the graph we can start by finding all its connected components\n",
+    "    conComponent = nx.connected_component_subgraphs(graph)\n",
+    "    #Then we find the component  with the larger number of edges\n",
+    "    giant = max(conComponent, key=nx.number_of_edges)\n",
+    "    #We get the size of the bigger component if this number is enough we can say that is a giant component\n",
+    "    size = nx.number_of_edges(giant)\n",
+    "    print(size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "giantComponent(graph1)"
    ]
   },
   {
@@ -200,7 +212,7 @@
    "source": [
     "1) There are 192 connected components in network1.\n",
     "\n",
-    "2) There is a giant component, its size (number of edges) is 1."
+    "2) There is a giant component, its size (number of edges) is 18317."
    ]
   },
   {
@@ -229,6 +241,9 @@
     "    distribPath = cl.Counter(path)\n",
     "    #Plot the distribution of length\n",
     "    plt.plot(list(distribPath.values()))\n",
+    "    plt.title(\"Distribution of path length between any two nodes\", fontsize=10)\n",
+    "    plt.xlabel(\"Length of paths\", fontsize=10)\n",
+    "    plt.ylabel(\"Number of paths\", fontsize=10)\n",
     "    plt.show()\n",
     "    #Compute the average numbers of nodes reachable from a node in 6 hops\n",
     "    sum = 0\n",
@@ -278,6 +293,7 @@
     "nbr_nodes2 = nx.number_of_nodes(graph2)\n",
     "print(nbr_edges2, nbr_nodes2)\n",
     "\n",
+    "giantComponent(graph2)\n",
     "\n",
     "degreeDistribution(graph2)\n",
     "average2 = shortPaths(graph2)\n",
@@ -288,7 +304,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The network has 43516 edges and 26542 nodes. We can see that the length of the shortest distance between any two nodes of the graph is much bigger than 6. Moreover we reach, in average, 71 nodes from any nodes of the graph in 6 hops, which is far away of the total number of nodes. So we can conclude that this graph is not a small world\n"
+    "The network has 43516 edges and 26542 nodes. \n",
+    "There are 5 connected components in network2, one is a giant component, its size (number of edges) is 43437.\n",
+    "We can see that the length of the shortest distance between any two nodes of the graph is much bigger than 6. Moreover we reach, in average, 71 nodes from any nodes of the graph in 6 hops, which is far away of the total number of nodes. So we can conclude that this graph is not a small world.\n"
    ]
   },
   {
@@ -304,7 +322,7 @@
     "collapsed": false
    },
    "source": [
-    "We can say that the network2 is the network of the road around New-York. Indeed the degree distribution of the first graph, shows nodes with degree superior at 100 which is impossible for a network of road. The degree distribution of the secound graph shows that all the nodes have a degree between 1 and 8. So the network of the road of New-York must be the secound one"
+    "We can say that the network2 is the network of the road around New-York. Indeed the degree distribution of the first graph, shows nodes with degree superior at 100 which is impossible for a network of road. The degree distribution of the secound graph shows that all the nodes have a degree between 1 and 8. So the network of the road of New-York must be the second one."
    ]
   }
  ],
