--- a/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
@@ -289,10 +289,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "graph3 = json_graph.node_link_graph(json_load)\n",
+    "\n",
+    "degree = graph3.degree(graph3.nodes())\n",
+    "remove = []\n",
+    "\n",
+    "for i in range(graph3.number_of_nodes()):\n",
+    "    if degree[i] == 2 and len(remove)<2500:\n",
+    "        temp = graph3.neighbors(i)\n",
+    "        remove.append((i,temp[0]))\n",
+    "            \n",
+    "graph3.remove_edges_from(remove)\n",
+    "startingNode = np.random.randint(0,nx.number_of_nodes(graph3))\n",
+    "sir = epidemics_helper.SimulationSIR(graph3, beta=10.0, gamma=0.1)\n",
+    "sir.launch_epidemic(source=startingNode, max_time=100.0)\n",
+    "plotStatus(graph3,sir)"
+   ]
   }
  ],
  "metadata": {
