--- a/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
@@ -57,6 +57,7 @@
     "filename = '../data/nyc_augmented_network.json'\n",
     "json_load = json.load(open(filename))\n",
     "G = json_graph.node_link_graph(json_load)\n",
+    "nbrNodes = nx.number_of_nodes(G)\n",
     "\n",
     "#Launch the epidemic\n",
     "sir = epidemics_helper.SimulationSIR(G, beta=10.0, gamma=0.1)\n",
@@ -293,21 +294,66 @@
    },
    "outputs": [],
    "source": [
-    "graph3 = json_graph.node_link_graph(json_load)\n",
+    "%%capture\n",
+    "def strategy():\n",
+    "    graph3 = json_graph.node_link_graph(json_load)\n",
     "\n",
-    "degree = graph3.degree(graph3.nodes())\n",
-    "remove = []\n",
-    "\n",
-    "for i in range(graph3.number_of_nodes()):\n",
-    "    if degree[i] == 2 and len(remove)<2500:\n",
-    "        temp = graph3.neighbors(i)\n",
-    "        remove.append((i,temp[0]))\n",
+    "    degree = graph3.degree(graph3.nodes())\n",
+    "    remove = []\n",
+    "    \n",
+    "    #Remove one edge of the nodes with degree 3\n",
+    "    for i in range(graph3.number_of_nodes()):\n",
+    "        if degree[i] == 2 and len(remove)<2500:\n",
+    "            temp = graph3.neighbors(i)\n",
+    "            remove.append((i,temp[0]))\n",
     "            \n",
-    "graph3.remove_edges_from(remove)\n",
-    "startingNode = np.random.randint(0,nx.number_of_nodes(graph3))\n",
-    "sir = epidemics_helper.SimulationSIR(graph3, beta=10.0, gamma=0.1)\n",
-    "sir.launch_epidemic(source=startingNode, max_time=100.0)\n",
-    "plotStatus(graph3,sir)"
+    "    graph3.remove_edges_from(remove)\n",
+    "    startingNode = np.random.randint(0,nx.number_of_nodes(graph3))\n",
+    "    sir = epidemics_helper.SimulationSIR(graph3, beta=10.0, gamma=0.1)\n",
+    "    sir.launch_epidemic(source=startingNode, max_time=100.0)\n",
+    "    nbrInf = 0\n",
+    "    nbrSuc = 0\n",
+    "    nbrRec = 0\n",
+    "    #Compute statistics\n",
+    "    for i in range(nx.number_of_nodes(graph3)):\n",
+    "        if sir.inf_time[i] <= 30 and sir.rec_time[i] > 30:\n",
+    "            nbrInf +=1\n",
+    "        elif sir.inf_time[i] > 30:\n",
+    "            nbrSuc +=1\n",
+    "        elif sir.rec_time[i] <= 30:\n",
+    "            nbrRec +=1\n",
+    "    return (nbrSuc, nbrInf, nbrRec)\n",
+    "\n",
+    "nbrSuc = 0\n",
+    "nbrRec = 0\n",
+    "nbrInf = 0\n",
+    "#Execute 50 times\n",
+    "for i in range(50):\n",
+    "    result = strategy()\n",
+    "    nbrInf += result[1]\n",
+    "    nbrSuc += result[0]\n",
+    "    nbrRec += result[2]\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Suceptible: \",nbrSuc/(50*nbrNodes)*100,\" Infected: \",nbrInf/(50*nbrNodes)*100,\" Recover: \",nbrRec/(50*nbrNodes)*100)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our strategy is more effective. Indeed after 30 days 72% of the population is still healthy. It is 8 points more than your strategy."
    ]
   }
  ],
