--- a/ix-lab3/lab3-dimred.ipynb
+++ b/ix-lab3/lab3-dimred.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -40,22 +40,60 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "data = sc.textFile(\"/ix/ml-20m/genome-tags.txt\").map(json.loads)\n",
-    "tag2name = dict(data.map(itemgetter(\"tagId\", \"tag\")).collect())"
+    "tag = sc.textFile(\"/ix/ml-20m/genome-tags.txt\").map(json.loads)\n",
+    "movie = sc.textFile(\"/ix/ml-20m/movies.txt\").map(json.loads)\n",
+    "movieandTag = sc.textFile(\"/ix/ml-20m/genome-scores.txt\").map(json.loads)\n",
+    "distinctMovie = movieandTag.map(itemgetter('movieId')).distinct()\n",
+    "\n",
+    "\n",
+    "\n",
+    "tag2name = dict(tag.map(itemgetter(\"tagId\", \"tag\")).collect())\n",
+    "movie2name = dict(movie.map(itemgetter(\"movieId\", \"title\")).collect())\n",
+    "row = movieandTag.map(itemgetter('relevance'))\n",
+    "row = row.collect()\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "k = 0\n",
+    "matrix = np.empty([tag.count(),distinctMovie.count()])\n",
+    "for j in range(distinctMovie.count()):\n",
+    "    for i in range(tag.count()):\n",
+    "        matrix[i][j] = row[k]\n",
+    "        k+=1\n",
+    "%time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(np.var(matrix,1))\n",
+    "U,s,V = np.linalg.svd(matrix)\n",
+    "print(s)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
