--- a/lab-intro/ix-1-lab-intro/3-spark.ipynb
+++ b/lab-intro/ix-1-lab-intro/3-spark.ipynb
@@ -30,11 +30,12 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'hdfs' n'est pas reconnu en tant que commande interne\n",
-      "ou externe, un programme ex‚cutable ou un fichier de commandes.\n"
+      "Found 2 items\r\n",
+      "drwxr-xr-x   - mdgleroy hadoop          0 2017-04-28 01:02 .sparkStaging\r\n",
+      "-rw-r--r--   3 mdgleroy hadoop    2147813 2017-02-22 14:01 election-day-tweets.txt\r\n"
      ]
     }
    ],
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -145,11 +146,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30000"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tweets.count()"
    ]
@@ -184,11 +196,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['@Lawrence',\n",
+       " '@HillaryClinton',\n",
+       " 'Two',\n",
+       " 'first',\n",
+       " '@SenSchumer',\n",
+       " 'tomorrow.',\n",
+       " '@TheLastWord',\n",
+       " '#brooklyn',\n",
+       " 'TheRealAmerica',\n",
+       " '#Vote',\n",
+       " '#Democrats',\n",
+       " '#NastyWomenVote',\n",
+       " '#Senate',\n",
+       " 'My',\n",
+       " '@latimesopinion']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Split every line into words and flattens the result (aggregate them all together)\n",
     "words = tweets.flatMap(lambda line: line.split())\n",
