--- a/ix-lab2/notebooks/ix-lab2-notebook-part4.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part4.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -77,11 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('4', 1), ('3', 1), ('0', 1), ('1', 1), ('2', {})]\n",
+      "[('4', 30), ('1', {}), ('5', 12), ('3', {}), ('2', {}), ('7', 30), ('0', {}), ('6', 29)]\n"
+     ]
+    }
+   ],
    "source": [
     "graph1 = nx.read_adjlist('../data/absorbing.graph', create_using = nx.DiGraph())\n",
     "graph2 = nx.read_adjlist('../data/components.graph', create_using = nx.DiGraph())\n",
@@ -106,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -141,11 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('4', 7), ('3', 35), ('0', 13), ('1', 34), ('2', 12)]\n",
+      "[('4', 7), ('1', 34), ('5', 7), ('3', 2), ('2', 11), ('7', 2), ('0', 16), ('6', 22)]\n"
+     ]
+    }
+   ],
    "source": [
     "graph1 = nx.read_adjlist('../data/absorbing.graph', create_using = nx.DiGraph())\n",
     "graph2 = nx.read_adjlist('../data/components.graph', create_using = nx.DiGraph())\n",
@@ -167,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -233,11 +251,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values(['United Kingdom', 'Europe', 'England', 'France', 'World War II', 'Latin', 'Germany', 'English language', 'India', 'United States'])\n"
+     ]
+    }
+   ],
    "source": [
     "graph = nx.read_adjlist('../data/wikipedia.graph', create_using = nx.DiGraph())\n",
     "printTopTen(pageRank(graph),graph.number_of_nodes())\n"
