--- a/ix-lab3/lab3-dimred.ipynb
+++ b/ix-lab3/lab3-dimred.ipynb
@@ -44,65 +44,6 @@
    },
    "outputs": [],
    "source": [
-    "tag = sc.textFile(\"/ix/ml-20m/genome-tags.txt\").map(json.loads)\n",
-    "movie = sc.textFile(\"/ix/ml-20m/movies.txt\").map(json.loads)\n",
-    "movieandTag = sc.textFile(\"/ix/ml-20m/genome-scores.txt\").map(json.loads)\n",
-    "distinctMovie = movieandTag.map(itemgetter('movieId')).distinct()\n",
-    "\n",
-    "\n",
-    "\n",
-    "tag2name = dict(tag.map(itemgetter(\"tagId\", \"tag\")).collect())\n",
-    "movie2name = dict(movie.map(itemgetter(\"movieId\", \"title\")).collect())\n",
-    "row = movieandTag.map(itemgetter('relevance'))\n",
-    "row = row.collect()\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "k = 0\n",
-    "matrix = np.empty([tag.count(),distinctMovie.count()])\n",
-    "for j in range(distinctMovie.ount()):\n",
-    "    for i in range(tag.count()):\n",
-    "        matrix[i][j] = row[k]\n",
-    "        k+=1\n",
-    "%time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print(np.var(matrix,1))\n",
-    "U,s,V = np.linalg.svd(matrix)\n",
-    "print(s)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "tags = sc.textFile(\"/ix/ml-20m/genome-tags.txt\").map(json.loads)\n",
     "tag2name = dict(tags.map(itemgetter(\"tagId\", \"tag\")).collect())\n",
     "movies = sc.textFile(\"/ix/ml-20m/movies.txt\").map(json.loads)\n",
@@ -133,7 +74,7 @@
    },
    "outputs": [],
    "source": [
-    "relevance = scores.map(lambda dict: dict['relevance'])\n",
+    "relevance = scores.map(lambda x: x['relevance'])\n",
     "matrix = np.array(relevance.collect()).reshape((nb_tags,nb_movieId_withTags), order='F')"
    ]
   },
@@ -169,15 +110,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "covMatrix = np.cov(matrix)\n",
-    "eigenvaluesCov = np.linalg.eig(covMatrix)\n",
+    "eigenvalues,eigenvector = np.linalg.eigh(covMatrix)\n",
     "\n",
     "plt.plot(eigenvaluesCov[0])\n",
-    "plt.title('Eigenvalues of the covariance matrix')"
+    "plt.title('Eigenvalues of the covariance matrix')\n",
+    "print(np.sum(eigenvalues))\n",
+    "print(np.argmin(eigenvalues[::-1].cumsum() < 2/3*eigenvalues.sum()) )\n",
+    "y = covMatrix.dot(eigenvector)\n",
+    "y = y[-36:,-36:]\n",
+    "print(y)"
    ]
   }
  ],
