--- a/ix-lab3/lab3-recsys.ipynb
+++ b/ix-lab3/lab3-recsys.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -129,40 +129,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.52551662957149\n"
+     ]
+    }
+   ],
    "source": [
     "print(mean)\n",
-    "userBias = trainingSet.map(lambda x:(x['userId'],x['rating']-mean)).groupByKey().map(lambda x:(x[0],sum(x[1])/len(x[1]))).sortByKey().collect()\n",
+    "userBias = trainingSet.map(lambda x:(x['userId'],x['rating']-mean)).groupByKey().map(lambda x:(x[0],sum(x[1])/len(x[1]))).collect()\n",
     "\n",
-    "itemBias = trainingSet.map(lambda x: (x['movieId'],x['rating']-mean )).goupByKey().sortByKey()#.map(lambda x:(x[0],sum(x[1])/len(x[1]))).sortByKey()\n",
-    "\n",
-    "print(itemBias.take(5))\n"
+    "userBiasDic = {}\n",
+    "for item in userBias:\n",
+    "    userBiasDic[item[0]] = item[1]\n",
+    "users = newData.map(lambda x: x['userId']).distinct().collect()\n",
+    "for user in users:\n",
+    "    if user not in userBiasDic.keys():\n",
+    "        userBiasDic[user] = 0\n",
+    "itemBias = trainingSet.map(lambda x: (x['movieId'],x['rating']-mean-userBiasDic[x['userId']])).groupByKey().map(lambda x:(x[0],sum(x[1])/len(x[1]))).sortByKey().collect()\n",
+    "itemBiasDic = {}\n",
+    "for item in itemBias:\n",
+    "    itemBiasDic[item[0]] = item[1] \n",
+    "movies = newData.map(lambda x: x['movieId']).distinct().collect()\n",
+    "for movie in movies:\n",
+    "    if movie not in itemBiasDic.keys():\n",
+    "        itemBiasDic[movie] = 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "a= [1,3,5,8,9,45]\n",
-    "print([t for t in a if t==2][0] if 2 in a else 0)"
+    "rating = validationSet.map(lambda x: (x['movieId'],x['userId'],mean+userBiasDic[x['userId']]+itemBiasDic[x['movieId']])).collect()\n",
+    "ratingDic = {}\n",
+    "for item in rating:\n",
+    "    ratingDic[(item[0],item[1])] = item[2]  \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "115304.69468059344\n",
+      "0.8506871965397951\n"
+     ]
+    }
+   ],
+   "source": [
+    "def error():\n",
+    "    temp = validationSet.map(lambda x:(x['userId'],pow(ratingDic[(x['movieId'],x['userId'])]-x['rating'],2))).groupByKey().map(lambda x:sum(x[1])/len(x[1])).sum()\n",
+    "    print(temp)\n",
+    "    nbrUser = validationSet.map(lambda x:x['userId']).distinct().count()\n",
+    "    err = temp / nbrUser\n",
+    "    return err\n",
+    "print(error())"
+   ]
   },
   {
    "cell_type": "code",
